# board_game_portal

./: .gitignore  Cargo.toml
.claude/: settings.local.json
docs/: protocol.md
src/: handlers.rs  lobby.rs  main.rs
src/games/: checkers.rs  chess.rs  go.rs  gomoku.rs  mod.rs
static/: game.html  index.html  lobby.html
static/css/: style.css
static/js/: game.js  lobby.js
static/js/games/: checkers.js  chess.js  go.js  gomoku.js
