[package]
name = "board-games-portal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "board-games-portal"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
actix-files = "0.6"
actix-web-actors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
dashmap = "5"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
tokio-stream = "0.1"
